--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,7 +1,7 @@
 <div ng-controller="settingsCtrl">
 	<div style="position:absolute; top:15px; right:20px;z-index:1000000;" ng-click="logOut()" ng-controller="registerCtrl" >
-		<a class="nav-icon href-custom settings-tab" target="_blank" href="" style="color:white;">
-		    <i class="fa fa-sign-out fa-2x" style="color:white"></i>
+		<a class="nav-icon href-custom settings-tab" target="_blank" href="" style="color:white;">		  
+		    <img class='app-icon' src="assets/img/logout9.svg" style="width: 24px; height: 24px;">
 		    <span>Logout</span>
 		</a>
 	</div>
@@ -15,7 +15,7 @@
 					<tr>
 					<td colspan="12" style="color:white;font-size: 1.2em;">
 						<div>
-							<span><h3 class="marg-12"><i class="fa fa-gear">&nbsp;</i>Settings</h3></span>
+							<span><h3 class="marg-12"><img class='app-icon' src="assets/img/cogwheel25.svg" style="width: 24px; height: 24px;">&nbsp;</i>Settings</h3></span>
 						</div>
 					</td>
 					</tr>
@@ -60,7 +60,7 @@
 		</div>
 		<md-button class="redcol home-elem md-raised" aria-label="randomGameStart" ng-click="appySettings()" style="margin-top:10px;">
 			<div flex layout="horizontal" layout-align="center center">
-			<div style="margin-right:15px;"><i class="fa fa-check fa-2x white-label"></i> </div>
+			<div style="margin-right:15px;"><img class='app-icon' src="assets/img/tick7.svg" style="width: 24px; height: 24px;"></div>
 			<div><h3 class="marg-12" class="white-label">Apply</h3> </div>
       		</div>
       	</md-button>
