--- a/www/templates/blog.html
+++ b/www/templates/blog.html
@@ -25,6 +25,19 @@
 								</div>
 							</div>
 						</li>
+						<!-- <li ng-repeat="suit in suitlist">
+							<span class="suiticon" ng-bind-html="renderHTML(suit.htmlicon)"></span><span class="suitname">{{suit.engname}} :</span> {{suit.ranks}}
+							<div style="position:relative;z-index:100; height:113.4px; margin: 10px auto;">
+								<div class="card playingCards simpleCards" ng-repeat="rnk in suit.rnks">
+									<a class="card frontRotated rank-{{rnk}}">
+										<span class="rank">{{getRankForHTML(rnk)}}</span>
+										<span class="suit" ng-bind-html="suit.suitimg | unsafe">
+											
+										</span>
+									</a>
+								</div>
+							</div>
+						</li> -->
 					</ul>
 					
 	    		</div>
