--- a/www/templates/blog.html
+++ b/www/templates/blog.html
@@ -19,25 +19,15 @@
 							<span class="suiticon" ng-bind-html="renderHTML(suit.htmlicon)"></span><span class="suitname">{{suit.engname}} :</span> {{suit.ranks}}
 							<div style="position:relative;z-index:100; height:113.4px; margin: 10px auto;">
 								<div class="card playingCards simpleCards" ng-repeat="card in sampleCards[$index] | orderBy: '-rank'" style="left:{{$index*40}}px; padding:0;">
-									<div class="card playingCards simpleCards" ng-style="getCardCSS()" style="padding:0;">
-										<a class="card frontRotated" ng-style="getCardPic(card)"></a>
+									<div class="" ng-style="getCardCSS()" style="padding:0;">
+										<a class="card frontRotated rank-{{card.rank}} {{card.suit}}">
+											<span class="rank">{{ getRankForHTML(card) }}</span>
+											<span class="suit" ng-bind-html="getCardSuit(card.suit)|unsafe"></span>
+										</a>
 									</div>
 								</div>
 							</div>
 						</li>
-						<!-- <li ng-repeat="suit in suitlist">
-							<span class="suiticon" ng-bind-html="renderHTML(suit.htmlicon)"></span><span class="suitname">{{suit.engname}} :</span> {{suit.ranks}}
-							<div style="position:relative;z-index:100; height:113.4px; margin: 10px auto;">
-								<div class="card playingCards simpleCards" ng-repeat="rnk in suit.rnks">
-									<a class="card frontRotated rank-{{rnk}}">
-										<span class="rank">{{getRankForHTML(rnk)}}</span>
-										<span class="suit" ng-bind-html="suit.suitimg | unsafe">
-											
-										</span>
-									</a>
-								</div>
-							</div>
-						</li> -->
 					</ul>
 					
 	    		</div>
