--- a/www/css/cards/cards.css
+++ b/www/css/cards/cards.css
@@ -772,12 +772,12 @@
 /* page specific animations ------------------------ */
 
 /* home -------------------------- */
-.page-home.ng-leave, .page-home.ng-hide, .overlay.ng-hide {
+.page-home.ng-leave, .page-home.ng-hide, .overlay.ng-hide, .page-leader.ng-leave {
     -webkit-animation:slideOutLeft 0.5s both ease-in 0s;
     -moz-animation:slideOutLeft 0.5s both ease-in 0s;
     animation:slideOutLeft 0.5s both ease-in 0s;  
 }
-.page-home.ng-enter         {  
+.page-home.ng-enter, .page-leader.ng-enter         {  
     -webkit-animation:slideInRight 0.5s both ease-in;
     -moz-animation:slideInRight 0.5s both ease-in;
     animation:slideInRight 0.5s both ease-in;  
